Assignment 1/assignment1/target/D96Parser.py
# Generated from main/d96/parser/D96.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'['", "']'", "'..'", "'('", "')'", "'{'", 
                     "'}'", "';'", "','", "':'", "'Break'", "'Continue'", 
                     "'If'", "'Elseif'", "'Else'", "'Foreach'", "'In'", 
                     "'Return'", "'Null'", "'Class'", "'Val'", "'Var'", 
                     "'Constructor'", "'Destructor'", "'New'", "'By'", "'Self'", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", 
                     "'&&'", "'||'", "'=='", "'='", "'!='", "'>'", "'<='", 
                     "'<'", "'>='", "'==.'", "'+.'", "'::'", "'.'", "'Int'", 
                     "'Float'", "'String'", "'Boolean'", "'Array'", "'Void'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "LB", "RB", "LP", "RP", "SEMI", "COMMA", "COLON", 
                      "BREAK", "CONTINUE", "IF", "ELSEIF", "ELSE", "FOREACH", 
                      "IN", "RETURN", "NULL", "CLASS", "VAL", "VAR", "CONSTRUCTOR", 
                      "DESTRUCTOR", "NEW", "BY", "SELF", "BlockComment", 
                      "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "MODULO", "NEGATE", 
                      "AND", "OR", "EQUAL", "ASSIGN", "DIFFERENT", "GREATER", 
                      "LESSTHANEQUAL", "LESSER", "GREATERTHANEQUAL", "STRINGCOMPARE", 
                      "STRINGCONCAT", "STATIC_ACCESS", "DOT", "INTTYPE", 
                      "FLOATTYPE", "STRINGTYPE", "BOOLEANTYPE", "ARRAYTYPE", 
                      "VOIDTYPE", "FLOATLIT", "INTLIT", "WS", "BOOLEANLIT", 
                      "ILLEGAL_ESCAPE", "STRINGLIT", "UNCLOSE_STRING", "DOLLARID", 
                      "ID", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_exp = 1
    RULE_relational_operations = 2
    RULE_logical_operations = 3
    RULE_adding_operations = 4
    RULE_multiplying_operations = 5
    RULE_logical_negate_operation = 6
    RULE_sign_operations = 7
    RULE_index_operations = 8
    RULE_intance_access_operarion = 9
    RULE_static_access_operation = 10
    RULE_object_create_operation = 11
    RULE_parenthesis_operations = 12
    RULE_string_operators = 13
    RULE_relational_operators = 14
    RULE_logical_and_or = 15
    RULE_adding_operators = 16
    RULE_multiplying_operators = 17
    RULE_element_expression = 18
    RULE_index_operators = 19
    RULE_array_lit = 20
    RULE_if_statements = 21
    RULE_else_ifList = 22
    RULE_the_rest_else_if = 23
    RULE_else_if = 24
    RULE_else_statements = 25
    RULE_assignment_statements = 26
    RULE_lhs = 27
    RULE_assignment_static_access = 28
    RULE_foreach_statements = 29
    RULE_break_statements = 30
    RULE_continue_statements = 31
    RULE_return_statements = 32
    RULE_method_invocations = 33
    RULE_block_statements = 34
    RULE_list_statement = 35
    RULE_the_rest_statements = 36
    RULE_variable_constant_declaration = 37
    RULE_variableList = 38
    RULE_single_statement = 39
    RULE_class_declaration = 40
    RULE_attributes_methods_declarations = 41
    RULE_the_rest_attributes_methods_declarations = 42
    RULE_arrayDeclaration = 43
    RULE_attribute_declaration = 44
    RULE_attributesList = 45
    RULE_iDlist = 46
    RULE_expList = 47
    RULE_theRestExp = 48
    RULE_primitive_type = 49
    RULE_method_declaration = 50
    RULE_list_parameters = 51
    RULE_the_rest_parameters_declarations = 52
    RULE_parameters_declaration = 53
    RULE_same_type_parameters = 54
    RULE_the_rest_ID = 55
    RULE_constructor = 56
    RULE_destructor = 57

    ruleNames =  [ "program", "exp", "relational_operations", "logical_operations", 
                   "adding_operations", "multiplying_operations", "logical_negate_operation", 
                   "sign_operations", "index_operations", "intance_access_operarion", 
                   "static_access_operation", "object_create_operation", 
                   "parenthesis_operations", "string_operators", "relational_operators", 
                   "logical_and_or", "adding_operators", "multiplying_operators", 
                   "element_expression", "index_operators", "array_lit", 
                   "if_statements", "else_ifList", "the_rest_else_if", "else_if", 
                   "else_statements", "assignment_statements", "lhs", "assignment_static_access", 
                   "foreach_statements", "break_statements", "continue_statements", 
                   "return_statements", "method_invocations", "block_statements", 
                   "list_statement", "the_rest_statements", "variable_constant_declaration", 
                   "variableList", "single_statement", "class_declaration", 
                   "attributes_methods_declarations", "the_rest_attributes_methods_declarations", 
                   "arrayDeclaration", "attribute_declaration", "attributesList", 
                   "iDlist", "expList", "theRestExp", "primitive_type", 
                   "method_declaration", "list_parameters", "the_rest_parameters_declarations", 
                   "parameters_declaration", "same_type_parameters", "the_rest_ID", 
                   "constructor", "destructor" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    LB=4
    RB=5
    LP=6
    RP=7
    SEMI=8
    COMMA=9
    COLON=10
    BREAK=11
    CONTINUE=12
    IF=13
    ELSEIF=14
    ELSE=15
    FOREACH=16
    IN=17
    RETURN=18
    NULL=19
    CLASS=20
    VAL=21
    VAR=22
    CONSTRUCTOR=23
    DESTRUCTOR=24
    NEW=25
    BY=26
    SELF=27
    BlockComment=28
    PLUS=29
    MINUS=30
    MULTIPLY=31
    DIVIDE=32
    MODULO=33
    NEGATE=34
    AND=35
    OR=36
    EQUAL=37
    ASSIGN=38
    DIFFERENT=39
    GREATER=40
    LESSTHANEQUAL=41
    LESSER=42
    GREATERTHANEQUAL=43
    STRINGCOMPARE=44
    STRINGCONCAT=45
    STATIC_ACCESS=46
    DOT=47
    INTTYPE=48
    FLOATTYPE=49
    STRINGTYPE=50
    BOOLEANTYPE=51
    ARRAYTYPE=52
    VOIDTYPE=53
    FLOATLIT=54
    INTLIT=55
    WS=56
    BOOLEANLIT=57
    ILLEGAL_ESCAPE=58
    STRINGLIT=59
    UNCLOSE_STRING=60
    DOLLARID=61
    ID=62
    ERROR_CHAR=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def class_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Class_declarationContext)
            else:
                return self.getTypedRuleContext(D96Parser.Class_declarationContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 116
                self.class_declaration()
                self.state = 119 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

            self.state = 121
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relational_operations(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Relational_operationsContext)
            else:
                return self.getTypedRuleContext(D96Parser.Relational_operationsContext,i)


        def string_operators(self):
            return self.getTypedRuleContext(D96Parser.String_operatorsContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_exp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp" ):
                return visitor.visitExp(self)
            else:
                return visitor.visitChildren(self)




    def exp(self):

        localctx = D96Parser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_exp)
        try:
            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.relational_operations()
                self.state = 124
                self.string_operators()
                self.state = 125
                self.relational_operations()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.relational_operations()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Relational_operationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logical_operations(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Logical_operationsContext)
            else:
                return self.getTypedRuleContext(D96Parser.Logical_operationsContext,i)


        def relational_operators(self):
            return self.getTypedRuleContext(D96Parser.Relational_operatorsContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_relational_operations

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelational_operations" ):
                return visitor.visitRelational_operations(self)
            else:
                return visitor.visitChildren(self)




    def relational_operations(self):

        localctx = D96Parser.Relational_operationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_relational_operations)
        try:
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.logical_operations(0)
                self.state = 131
                self.relational_operators()
                self.state = 132
                self.logical_operations(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.logical_operations(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logical_operationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def adding_operations(self):
            return self.getTypedRuleContext(D96Parser.Adding_operationsContext,0)


        def logical_operations(self):
            return self.getTypedRuleContext(D96Parser.Logical_operationsContext,0)


        def logical_and_or(self):
            return self.getTypedRuleContext(D96Parser.Logical_and_orContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_logical_operations

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogical_operations" ):
                return visitor.visitLogical_operations(self)
            else:
                return visitor.visitChildren(self)



    def logical_operations(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = D96Parser.Logical_operationsContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_logical_operations, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.adding_operations(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 146
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = D96Parser.Logical_operationsContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_logical_operations)
                    self.state = 140
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 141
                    self.logical_and_or()
                    self.state = 142
                    self.adding_operations(0) 
                self.state = 148
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Adding_operationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def multiplying_operations(self):
            return self.getTypedRuleContext(D96Parser.Multiplying_operationsContext,0)


        def adding_operations(self):
            return self.getTypedRuleContext(D96Parser.Adding_operationsContext,0)


        def adding_operators(self):
            return self.getTypedRuleContext(D96Parser.Adding_operatorsContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_adding_operations

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdding_operations" ):
                return visitor.visitAdding_operations(self)
            else:
                return visitor.visitChildren(self)



    def adding_operations(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = D96Parser.Adding_operationsContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_adding_operations, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.multiplying_operations(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 158
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = D96Parser.Adding_operationsContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_adding_operations)
                    self.state = 152
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 153
                    self.adding_operators()
                    self.state = 154
                    self.multiplying_operations(0) 
                self.state = 160
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Multiplying_operationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logical_negate_operation(self):
            return self.getTypedRuleContext(D96Parser.Logical_negate_operationContext,0)


        def multiplying_operations(self):
            return self.getTypedRuleContext(D96Parser.Multiplying_operationsContext,0)


        def multiplying_operators(self):
            return self.getTypedRuleContext(D96Parser.Multiplying_operatorsContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_multiplying_operations

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiplying_operations" ):
                return visitor.visitMultiplying_operations(self)
            else:
                return visitor.visitChildren(self)



    def multiplying_operations(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = D96Parser.Multiplying_operationsContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_multiplying_operations, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.logical_negate_operation()
            self._ctx.stop = self._input.LT(-1)
            self.state = 170
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = D96Parser.Multiplying_operationsContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_multiplying_operations)
                    self.state = 164
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 165
                    self.multiplying_operators()
                    self.state = 166
                    self.logical_negate_operation() 
                self.state = 172
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Logical_negate_operationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEGATE(self):
            return self.getToken(D96Parser.NEGATE, 0)

        def logical_negate_operation(self):
            return self.getTypedRuleContext(D96Parser.Logical_negate_operationContext,0)


        def sign_operations(self):
            return self.getTypedRuleContext(D96Parser.Sign_operationsContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_logical_negate_operation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogical_negate_operation" ):
                return visitor.visitLogical_negate_operation(self)
            else:
                return visitor.visitChildren(self)




    def logical_negate_operation(self):

        localctx = D96Parser.Logical_negate_operationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_logical_negate_operation)
        try:
            self.state = 176
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.NEGATE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 173
                self.match(D96Parser.NEGATE)
                self.state = 174
                self.logical_negate_operation()
                pass
            elif token in [D96Parser.LB, D96Parser.NULL, D96Parser.NEW, D96Parser.SELF, D96Parser.MINUS, D96Parser.ARRAYTYPE, D96Parser.FLOATLIT, D96Parser.INTLIT, D96Parser.BOOLEANLIT, D96Parser.STRINGLIT, D96Parser.DOLLARID, D96Parser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 175
                self.sign_operations()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sign_operationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MINUS(self):
            return self.getToken(D96Parser.MINUS, 0)

        def sign_operations(self):
            return self.getTypedRuleContext(D96Parser.Sign_operationsContext,0)


        def index_operations(self):
            return self.getTypedRuleContext(D96Parser.Index_operationsContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_sign_operations

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSign_operations" ):
                return visitor.visitSign_operations(self)
            else:
                return visitor.visitChildren(self)




    def sign_operations(self):

        localctx = D96Parser.Sign_operationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_sign_operations)
        try:
            self.state = 181
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.MINUS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 178
                self.match(D96Parser.MINUS)
                self.state = 179
                self.sign_operations()
                pass
            elif token in [D96Parser.LB, D96Parser.NULL, D96Parser.NEW, D96Parser.SELF, D96Parser.ARRAYTYPE, D96Parser.FLOATLIT, D96Parser.INTLIT, D96Parser.BOOLEANLIT, D96Parser.STRINGLIT, D96Parser.DOLLARID, D96Parser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 180
                self.index_operations(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Index_operationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def intance_access_operarion(self):
            return self.getTypedRuleContext(D96Parser.Intance_access_operarionContext,0)


        def index_operations(self):
            return self.getTypedRuleContext(D96Parser.Index_operationsContext,0)


        def index_operators(self):
            return self.getTypedRuleContext(D96Parser.Index_operatorsContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_index_operations

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndex_operations" ):
                return visitor.visitIndex_operations(self)
            else:
                return visitor.visitChildren(self)



    def index_operations(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = D96Parser.Index_operationsContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_index_operations, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.intance_access_operarion(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 190
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = D96Parser.Index_operationsContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_index_operations)
                    self.state = 186
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 187
                    self.index_operators() 
                self.state = 192
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Intance_access_operarionContext(ParserRuleContext):
        __slots__ = 'parser'
